// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockView: index mapStateToProps return block when blockData is empty 1`] = `
Object {
  "block": Object {
    "blockData": Object {
      "coinbase": "a1021e62fbb7fe282b7e2bd1ca26325af02bb43e",
      "difficulty": 143854,
      "extraData": "",
      "gasLimit": 2.7640800523559524e+31,
      "gasUsed": 0,
      "kind": "BlockData",
      "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
      "nonce": 6,
      "number": 210,
      "parentHash": "868f0fc14a4388e1652ffcf9910ee5f8656d9c0002407800a1f55d3606069803",
      "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "stateRoot": "ad16f12eb1249d92fb95823dcd015dfb03e4628c7a36f1dfb787c01910e59dca",
      "timestamp": "2017-12-26T06:32:44Z",
      "transactionsRoot": "64f030ddfb2341468a9d4e4712eabf77f7712afc465a0a048f43c87fa7522b9d",
      "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
    },
    "blockUncles": Array [],
    "kind": "Block",
    "next": "",
    "receiptTransactions": Array [
      Object {
        "from": "7241e4db9c40568b889277e152a08a956cfaa60f",
        "gasLimit": 100000000,
        "gasPrice": 1,
        "hash": "503007d37d1e39a42bd6d009ec2a4efe6b9b6c6a7b1ce892e8621eca48e77156",
        "kind": "Transaction",
        "nonce": 0,
        "r": "724b4be0569bd52aa7704fa24e3ff9ec96b1a604438b4883f3c63d0446c650e7",
        "s": "7c44e50b354da261d288b84c5a6d24dfe173d8cb664d87c1ed9599ebd5989770",
        "transactionType": "Contract",
        "v": "1c",
        "value": 0,
      },
    ],
  },
}
`;

exports[`BlockView: index mapStateToProps return block when queryEngine is empty 1`] = `
Object {
  "block": Object {
    "blockData": Object {
      "coinbase": "a1021e62fbb7fe282b7e2bd1ca26325af02bb43e",
      "difficulty": 143854,
      "extraData": "",
      "gasLimit": 2.7640800523559524e+31,
      "gasUsed": 0,
      "kind": "BlockData",
      "mixHash": "0000000000000000000000000000000000000000000000000000000000000000",
      "nonce": 6,
      "number": 210,
      "parentHash": "868f0fc14a4388e1652ffcf9910ee5f8656d9c0002407800a1f55d3606069803",
      "receiptsRoot": "56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "stateRoot": "ad16f12eb1249d92fb95823dcd015dfb03e4628c7a36f1dfb787c01910e59dca",
      "timestamp": "2017-12-26T06:32:44Z",
      "transactionsRoot": "64f030ddfb2341468a9d4e4712eabf77f7712afc465a0a048f43c87fa7522b9d",
      "unclesHash": "1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
    },
    "blockUncles": Array [],
    "kind": "Block",
    "next": "",
    "receiptTransactions": Array [
      Object {
        "from": "7241e4db9c40568b889277e152a08a956cfaa60f",
        "gasLimit": 100000000,
        "gasPrice": 1,
        "hash": "503007d37d1e39a42bd6d009ec2a4efe6b9b6c6a7b1ce892e8621eca48e77156",
        "kind": "Transaction",
        "nonce": 0,
        "r": "724b4be0569bd52aa7704fa24e3ff9ec96b1a604438b4883f3c63d0446c650e7",
        "s": "7c44e50b354da261d288b84c5a6d24dfe173d8cb664d87c1ed9599ebd5989770",
        "transactionType": "Contract",
        "v": "1c",
        "value": 0,
      },
    ],
  },
}
`;

exports[`BlockView: index render component with no recipient transactions 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-9\\">
      <div className=\\"h3\\">
        Block #
        210
      </div>
    </div>
    <div className=\\"col-sm-3 smd-pad-16 text-right\\">
      <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-icon-arrow-left\\" text=\\"Back\\" />
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"pt-card\\">
        <table className=\\"pt-table pt-str\\">
          <thead>
            <tr>
              <th>
                Field
              </th>
              <th>
                Value
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Parent Hash
              </td>
              <td>
                <HexText value=\\"868f0fc14a4388e1652ffcf9910ee5f8656d9c0002407800a1f55d3606069803\\" classes=\\"small smd-pad-4\\" />
              </td>
            </tr>
            <tr>
              <td>
                Difficulty
              </td>
              <td>
                <small>
                  <Text ellipsize={true}>
                    143854
                  </Text>
                </small>
              </td>
            </tr>
            <tr>
              <td>
                Nonce
              </td>
              <td>
                <small>
                  <Text ellipsize={true}>
                    6
                  </Text>
                </small>
              </td>
            </tr>
            <tr>
              <td>
                State Root
              </td>
              <td>
                <HexText value=\\"ad16f12eb1249d92fb95823dcd015dfb03e4628c7a36f1dfb787c01910e59dca\\" classes=\\"small smd-pad-4\\" />
              </td>
            </tr>
            <tr>
              <td>
                Transactions Root
              </td>
              <td>
                <HexText value=\\"64f030ddfb2341468a9d4e4712eabf77f7712afc465a0a048f43c87fa7522b9d\\" classes=\\"small smd-pad-4\\" />
              </td>
            </tr>
            <tr>
              <td>
                Timestamp
              </td>
              <td>
                <small>
                  <Text ellipsize={true}>
                    2017-12-26 01:32:44 AM
                  </Text>
                </small>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Transactions 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Hash
              </h5>
            </th>
            <th width=\\"20%\\" className=\\"text-right\\">
              <h5>
                Value
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                Type
              </h5>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td colSpan={5}>
              No Data
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        New Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Removed Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        New Certificates 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Certificate Data
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Revoked Certificates 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Address
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Proposal Signature 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"40%\\">
              <h5>
                R
              </h5>
            </th>
            <th width=\\"40%\\">
              <h5>
                S
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                V
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Commitment Signatures 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"40%\\">
              <h5>
                R
              </h5>
            </th>
            <th width=\\"40%\\">
              <h5>
                S
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                V
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>"
`;

exports[`BlockView: index render component with values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-9\\">
      <div className=\\"h3\\">
        Block #
        210
      </div>
    </div>
    <div className=\\"col-sm-3 smd-pad-16 text-right\\">
      <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-icon-arrow-left\\" text=\\"Back\\" />
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"pt-card\\">
        <table className=\\"pt-table pt-str\\">
          <thead>
            <tr>
              <th>
                Field
              </th>
              <th>
                Value
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Parent Hash
              </td>
              <td>
                <HexText value=\\"868f0fc14a4388e1652ffcf9910ee5f8656d9c0002407800a1f55d3606069803\\" classes=\\"small smd-pad-4\\" />
              </td>
            </tr>
            <tr>
              <td>
                Difficulty
              </td>
              <td>
                <small>
                  <Text ellipsize={true}>
                    143854
                  </Text>
                </small>
              </td>
            </tr>
            <tr>
              <td>
                Nonce
              </td>
              <td>
                <small>
                  <Text ellipsize={true}>
                    6
                  </Text>
                </small>
              </td>
            </tr>
            <tr>
              <td>
                State Root
              </td>
              <td>
                <HexText value=\\"ad16f12eb1249d92fb95823dcd015dfb03e4628c7a36f1dfb787c01910e59dca\\" classes=\\"small smd-pad-4\\" />
              </td>
            </tr>
            <tr>
              <td>
                Transactions Root
              </td>
              <td>
                <HexText value=\\"64f030ddfb2341468a9d4e4712eabf77f7712afc465a0a048f43c87fa7522b9d\\" classes=\\"small smd-pad-4\\" />
              </td>
            </tr>
            <tr>
              <td>
                Timestamp
              </td>
              <td>
                <small>
                  <Text ellipsize={true}>
                    2017-12-26 01:32:44 AM
                  </Text>
                </small>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Transactions 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Hash
              </h5>
            </th>
            <th width=\\"20%\\" className=\\"text-right\\">
              <h5>
                Value
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                Type
              </h5>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr onClick={[Function: onClick]}>
            <td width=\\"60%\\">
              <HexText value=\\"503007d37d1e39a42bd6d009ec2a4efe6b9b6c6a7b1ce892e8621eca48e77156\\" classes=\\"small smd-pad-4\\" />
            </td>
            <td width=\\"20%\\">
              <Text ellipsize={true}>
                <Blueprint.Tooltip tooltipClassName=\\"smd-padding-8\\" content=\\"0 wei\\" position={0} hoverCloseDelay={0} hoverOpenDelay={100} isDisabled={false} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={100} useSmartArrowPositioning={true} useSmartPositioning={false}>
                  <small>
                    0
                     wei
                  </small>
                </Blueprint.Tooltip>
              </Text>
            </td>
            <td width=\\"20%\\">
              <small>
                Contract
              </small>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        New Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Removed Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        New Certificates 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Certificate Data
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Revoked Certificates 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Address
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Proposal Signature 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"40%\\">
              <h5>
                R
              </h5>
            </th>
            <th width=\\"40%\\">
              <h5>
                S
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                V
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Commitment Signatures 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"40%\\">
              <h5>
                R
              </h5>
            </th>
            <th width=\\"40%\\">
              <h5>
                S
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                V
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>"
`;

exports[`BlockView: index render component without values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row\\">
    <div className=\\"col-sm-9\\">
      <div className=\\"h3\\">
        Block #
      </div>
    </div>
    <div className=\\"col-sm-3 smd-pad-16 text-right\\">
      <Blueprint.Button onClick={[Function: onClick]} className=\\"pt-icon-arrow-left\\" text=\\"Back\\" />
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"pt-card\\">
        <table>
          <tbody>
            <tr colSpan={2}>
              No data
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Transactions 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Hash
              </h5>
            </th>
            <th width=\\"20%\\" className=\\"text-right\\">
              <h5>
                Value
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                Type
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        New Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Removed Validators 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Username
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        New Certificates 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Certificate Data
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Revoked Certificates 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"60%\\">
              <h5>
                Address
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Proposal Signature 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"40%\\">
              <h5>
                R
              </h5>
            </th>
            <th width=\\"40%\\">
              <h5>
                S
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                V
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
  <div className=\\"row\\">
    <div className=\\"col-sm-12\\">
      <div className=\\"h3\\">
        Commitment Signatures 
      </div>
      <table className=\\"pt-table pt-interactive pt-condensed pt-striped\\" style={{...}}>
        <thead>
          <tr>
            <th width=\\"40%\\">
              <h5>
                R
              </h5>
            </th>
            <th width=\\"40%\\">
              <h5>
                S
              </h5>
            </th>
            <th width=\\"20%\\">
              <h5>
                V
              </h5>
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</div>"
`;
